# xhec-mlops-project-student

./: .gitignore  .pre-commit-config.yaml  Dockerfile.app  PR_0.md  README.md  README1.md  config.py  deploy_retrain.py  environment.yml  orchestration.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_solution.sh
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/475563951085178359/: meta.yaml
notebooks/mlruns/475563951085178359/043166442a0846ab9e0bc1e2dbbdc61f/: meta.yaml
notebooks/mlruns/475563951085178359/3d9ade254da54bdcb16ee39e5bc211cc/: meta.yaml
notebooks/mlruns/475563951085178359/5ab5cf6ae2b547688e7b88af7bd6eaa5/: meta.yaml
notebooks/mlruns/475563951085178359/62142076bd44477aa75d80b50f4ab1a4/: meta.yaml
notebooks/mlruns/475563951085178359/7d48d6155c9e45b4843f3601313542f7/: meta.yaml
notebooks/mlruns/475563951085178359/7feb5a3acaa748fe9b0b11340ccf7ac6/: meta.yaml
notebooks/mlruns/475563951085178359/92ba012f13254e05ab94b8211574cfdc/: meta.yaml
notebooks/mlruns/475563951085178359/9b6860f44d914455b328d53263b5746b/: meta.yaml
notebooks/mlruns/475563951085178359/9c895e9ce1a4432b971dcaf8d35628d5/: meta.yaml
notebooks/mlruns/475563951085178359/9d9c92ffa2e545e5bd92b6d3ead286d5/: meta.yaml
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: model.pkl
(+44 files in other folders)
