[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "Xianghan Mei", email = "xianghan.mei@hec.edu" },
  { name = "Chenfei Wang", email = "chenfei.wang@hec.edu" },
  { name = "Rong Shen", email = "rong.shen@hec.edu" },
  { name = "Xiaohan Ke", email = "xiaohan.ke@hec.edu" },
  { name = "Mingyu Wang", email = "mingyu.wang@hec.edu" }
]
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10.15"

[project.urls]
"Homepage" = "https://github.com/jazmnm/xhec-mlops-project-student"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
known_third_party = ["pandas", "numpy", "scikit-learn"]

[flake8]
max-line-length = 88
ignore = ["E203", "W503"]
